daniel_millan/session01/exercise01/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-01
  labels:
    app: mariadb
    service: database
spec:
  template:
    metadata:
      labels:
        app: mariadb
        service: database
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
        ports:
        - containerPort: 3306
          name: mariadb-port
