daniel_millan/session01/exercise01/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-01
  labels:
    app: wordpress
    service: frontend
spec:
  replicas: 8
  template:
    metadata:
      labels:
        app: wordpress
        service: frontend
    spec:
      containers:
      - image: bitnami/wordpress:latest
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
