daniel_millan/session01/exercise01/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: exercise-01
  labels:    
    app: mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
  clusterIP: None
