daniel_millan/session01/exercise01/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: exercise-01
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: wordpress
  type: LoadBalancer
